--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
     <div class="slides-wrapper" id="slidesWrapper">
       <div class="slide"><img src="/images/main-poster.jpg" alt="메인 포스터">
 </div>
-      <div class="slide"><img src="/images/festinfo1.jpg" alt="축제 정보 1"></div>
-      <div class="slide"><img src="/images/festinfo2.jpg" alt="축제 정보 2"></div>
-      <div class="slide"><img src="/images/info1.jpg" alt="공연 소개 1"></div>
-      <div class="slide"><img src="/images/info2.jpg" alt="공연 소개 2"></div>
-      <div class="slide"><img src="/images/info3.jpg" alt="공연 소개 3"></div>
-      <div class="slide"><img src="/images/info4.jpg" alt="공연 소개 4"></div>
-      <div class="slide"><img src="/images/info5.jpg" alt="공연 소개 5"></div>
-      <div class="slide"><img src="/images/info6.jpg" alt="공연 소개 6"></div>
-      <div class="slide"><img src="/images/info7.jpg" alt="공연 소개 7"></div>
-      <div class="slide"><img src="/images/info8.jpg" alt="공연 소개 8"></div>
-      <div class="slide"><img src="/images/info9.jpg" alt="공연 소개 9"></div>
-      <div class="slide"><img src="/images/info10.jpg" alt="공연 소개 10"></div>
-      <div class="slide"><img src="/images/info11.jpg" alt="공연 소개 11"></div>
-      <div class="slide"><img src="/images/info12.jpg" alt="공연 소개 12"></div>
-      <div class="slide"><img src="/images/info13.jpg" alt="공연 소개 13"></div>
-      <div class="slide"><img src="/images/info14.jpg" alt="공연 소개 14"></div>
-      <div class="slide"><img src="/images/info15.jpg" alt="공연 소개 15"></div>
-      <div class="slide"><img src="/images/info16.jpg" alt="공연 소개 16"></div>
-      <div class="slide"><img src="/images/info17.jpg" alt="공연 소개 17"></div>
-      <div class="slide"><img src="/images/info18.jpg" alt="공연 소개 18"></div>
-      <div class="slide"><img src="/images/program.jpg" alt="공연 프로그램"></div>
-      <div class="slide"><img src="/images/timetable53.jpg" alt="일정표 1"></div>
-      <div class="slide"><img src="/images/timetable54.jpg" alt="일정표 2"></div>
-      <div class="slide"><img src="/images/timetable55.jpg" alt="일정표 3"></div>
-      <div class="slide"><img src="/images/map1.jpg" alt="지도 1"></div>
-      <div class="slide"><img src="/images/map2.jpg" alt="지도 2"></div>
+      <div class="slide"><img src="/public/images/festinfo1.jpg" alt="축제 정보 1"></div>
+      <div class="slide"><img src="/public/images/festinfo2.jpg" alt="축제 정보 2"></div>
+      <div class="slide"><img src="/public/images/info1.jpg" alt="공연 소개 1"></div>
+      <div class="slide"><img src="/public/images/info2.jpg" alt="공연 소개 2"></div>
+      <div class="slide"><img src="/public/images/info3.jpg" alt="공연 소개 3"></div>
+      <div class="slide"><img src="/public/images/info4.jpg" alt="공연 소개 4"></div>
+      <div class="slide"><img src="/public/images/info5.jpg" alt="공연 소개 5"></div>
+      <div class="slide"><img src="/public/images/info6.jpg" alt="공연 소개 6"></div>
+      <div class="slide"><img src="/public/images/info7.jpg" alt="공연 소개 7"></div>
+      <div class="slide"><img src="/public/images/info8.jpg" alt="공연 소개 8"></div>
+      <div class="slide"><img src="/public/images/info9.jpg" alt="공연 소개 9"></div>
+      <div class="slide"><img src="/public/images/info10.jpg" alt="공연 소개 10"></div>
+      <div class="slide"><img src="/public/images/info11.jpg" alt="공연 소개 11"></div>
+      <div class="slide"><img src="/public/images/info12.jpg" alt="공연 소개 12"></div>
+      <div class="slide"><img src="/public/images/info13.jpg" alt="공연 소개 13"></div>
+      <div class="slide"><img src="/public/images/info14.jpg" alt="공연 소개 14"></div>
+      <div class="slide"><img src="/public/images/info15.jpg" alt="공연 소개 15"></div>
+      <div class="slide"><img src="/public/images/info16.jpg" alt="공연 소개 16"></div>
+      <div class="slide"><img src="/public/images/info17.jpg" alt="공연 소개 17"></div>
+      <div class="slide"><img src="/public/images/info18.jpg" alt="공연 소개 18"></div>
+      <div class="slide"><img src="/public/images/program.jpg" alt="공연 프로그램"></div>
+      <div class="slide"><img src="/public/images/timetable53.jpg" alt="일정표 1"></div>
+      <div class="slide"><img src="/public/images/timetable54.jpg" alt="일정표 2"></div>
+      <div class="slide"><img src="/public/images/timetable55.jpg" alt="일정표 3"></div>
+      <div class="slide"><img src="/public/images/map1.jpg" alt="지도 1"></div>
+      <div class="slide"><img src="/public/images/map2.jpg" alt="지도 2"></div>
     </div>
     <div class="slide-indicator" id="slideIndicator">1 / 28</div>
   </div>
