--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <button class="menu-btn" onclick="toggleMenu()">☰</button>
 <div class="menu-list" id="menuList"><button onclick="goToSlideInstant(1)">🎪 축제 소개</button><button onclick="goToSlideInstant(3)">🗓️ 일정표</button><button onclick="goToSlideInstant(6)">🗺️ 지도</button><button onclick="goToSlideInstant(8)">🎭 공연 정보</button></div>
 <div class="language-switcher">
-  <a href="https://leaflet-english.pages.dev" id="to-en">EN</a>
+  <a href="https://leaflet-web2025.pages.dev" id="to-kr">KR</a> |
+  <a href="https://leaflet-english.pages.dev" id="to-eb">EN</a>
 </div>
 <div class="slider-container">
 <div class="slides-wrapper" id="slidesWrapper"><div class="slide"><img alt="메인 포스터" src="/images/main-poster.webp"/>
