--- a/index.html
+++ b/index.html
@@ -15,8 +15,35 @@
   <a href="https://leaflet-english.pages.dev" id="to-eb">EN</a>
 </div>
 <div class="slider-container">
-<div class="slides-wrapper" id="slidesWrapper"><div class="slide"><img alt="메인 포스터" src="/images/main-poster.webp"/>
-</div><div class="slide"><img alt="축제 정보 1" src="/images/festinfo1.webp"/></div><div class="slide"><img alt="축제 정보 2" src="/images/festinfo2.webp"/></div><div class="slide"><img alt="일정표 1" src="/images/timetable53.webp"/></div><div class="slide"><img alt="일정표 2" src="/images/timetable54.webp"/></div><div class="slide"><img alt="일정표 3" src="/images/timetable55.webp"/></div><div class="slide"><img alt="지도 1" src="/images/map1.webp"/></div><div class="slide"><img alt="지도 2" src="/images/map2.webp"/></div><div class="slide"><img alt="공연 소개 1" src="/images/info1.webp"/></div><div class="slide"><img alt="공연 소개 2" src="/images/info2.webp"/></div><div class="slide"><img alt="공연 소개 3" src="/images/info3.webp"/></div><div class="slide"><img alt="공연 소개 4" src="/images/info4.webp"/></div><div class="slide"><img alt="공연 소개 5" src="/images/info5.webp"/></div><div class="slide"><img alt="공연 소개 6" src="/images/info6.webp"/></div><div class="slide"><img alt="공연 소개 7" src="/images/info7.webp"/></div><div class="slide"><img alt="공연 소개 8" src="/images/info8.webp"/></div><div class="slide"><img alt="공연 소개 9" src="/images/info9.webp"/></div><div class="slide"><img alt="공연 소개 10" src="/images/info10.webp"/></div><div class="slide"><img alt="공연 소개 11" src="/images/info11.webp"/></div><div class="slide"><img alt="공연 소개 12" src="/images/info12.webp"/></div><div class="slide"><img alt="공연 소개 13" src="/images/info13.webp"/></div><div class="slide"><img alt="공연 소개 14" src="/images/info14.webp"/></div><div class="slide"><img alt="공연 소개 15" src="/images/info15.webp"/></div><div class="slide"><img alt="공연 소개 16" src="/images/info16.webp"/></div><div class="slide"><img alt="공연 소개 17" src="/images/info17.webp"/></div><div class="slide"><img alt="공연 소개 18" src="/images/info18.webp"/></div><div class="slide"><img alt="공연 프로그램" src="/images/program.webp"/></div></div>
+<div class="slides-wrapper" id="slidesWrapper">
+  <div class="slide"><img alt="메인 포스터" src="/images/main-poster.webp"/></div>
+  <div class="slide"><img alt="축제 정보 1" src="/images/festinfo1.webp"/></div>
+  <div class="slide"><img alt="축제 정보 2" src="/images/festinfo2.webp"/></div>
+  <div class="slide"><img alt="일정표 1" src="/images/timetable53.webp"/></div>
+  <div class="slide"><img alt="일정표 2" src="/images/timetable54.webp"/></div>
+  <div class="slide"><img alt="일정표 3" src="/images/timetable55.webp"/></div>
+  <div class="slide"><img alt="지도 1" src="/images/map1.webp"/></div>
+  <div class="slide"><img alt="지도 2" src="/images/map2.webp"/></div>
+  <div class="slide"><img alt="공연 소개 1" src="/images/info1.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 2" src="/images/info2.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 3" src="/images/info3.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 4" src="/images/info4.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 5" src="/images/info5.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 6" src="/images/info6.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 7" src="/images/info7.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 8" src="/images/info8.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 9" src="/images/info9.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 10" src="/images/info10.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 11" src="/images/info11.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 12" src="/images/info12.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 13" src="/images/info13.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 14" src="/images/info14.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 15" src="/images/info15.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 16" src="/images/info16.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 17" src="/images/info17.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 소개 18" src="/images/info18.webp" loading="lazy"/></div>
+  <div class="slide"><img alt="공연 프로그램" src="/images/program.webp" loading="lazy"/></div>
+</div>
 <div class="slide-indicator" id="slideIndicator">1 / 28</div>
 </div>
 <button class="nav-btn prev-btn" onclick="changeSlide(-1)">◀</button>
