--- a/index.html
+++ b/index.html
@@ -2,19 +2,9 @@
 
 <html lang="ko">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0" name="viewport"/>
-<title>서울서커스페스티벌 2025</title>
-<link href="style.css" rel="stylesheet"/>
-<script>
-  // Chrome 등의 브라우저에서 위험 페이지로 차단되었을 경우를 대비한 대체 링크
-  if (window.location.hostname === 'leaflet-web2025.pages.dev') {
-    setTimeout(() => {
-      // 일정 시간이 지나도 페이지가 정상 로딩되지 않으면 자동 리디렉션
-      window.location.href = "https://leaflet-english.pages.dev"; // 👉 여기에 대체 주소 입력
-    }, 3000); // 3초 후 자동 이동
-  }
-</script>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=https://festival-leaflet2025-kr.pages.dev/" />
+  <title>페이지 이동 중...</title>
 </head>
 <body>
 <button class="menu-btn" onclick="toggleMenu()">☰</button>
